# conker-ledger

./: .gitignore  README.md  pyproject.toml
docs/: VALIDITY_PACKAGER.md
docs/superpowers/plans/: 2026-03-28-visualization-improvements.md
docs/superpowers/specs/: 2026-03-28-visualization-improvements-design.md
examples/: README.md
examples/carver-quick-check-2026-03-28/: bundle_manifest.json  claim.json
examples/carver-quick-check-2026-03-28/artifacts/: report_README.md  scan_summary.json  top_study.csv  top_study.json
examples/carver-quick-check-2026-03-28/evidence/: audits.json  metrics.json  provenance.json
examples/carver-quick-check-2026-03-28/report/: README.md
examples/conker-artifact-quick-check-2026-03-28/: bundle_manifest.json  claim.json
examples/conker-artifact-quick-check-2026-03-28/artifacts/: report_README.md  scan_summary.json
examples/conker-artifact-quick-check-2026-03-28/evidence/: audits.json  metrics.json  provenance.json
examples/conker-artifact-quick-check-2026-03-28/report/: README.md
examples/conker-backlog-2026-03-28/: README.md  failed_full_eval.json  lineage.json  scan_summary.json  survival.json  top_bridge.json  top_full_eval.json
examples/conker-frontier-reset-2026-03-28/: bundle_manifest.json  claim.json
examples/conker-frontier-reset-2026-03-28/evidence/: audits.json  metrics.json  provenance.json
examples/parameter-golf-pr998-replacement-2026-03-29/: bundle_manifest.json  claim.json
src/conker_ledger/: cli.py  ledger.py
tests/: test_bundle.py  test_scan.py  test_viz.py
(+32 files in other folders)
