[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conker-ledger"
version = "0.1.0"
description = "Validity-bundle packaging and backlog-analysis tooling for Conker-style research outputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
conker-ledger = "conker_ledger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
